final README.md

--- a/recipes/parmesantupp.html
+++ b/recipes/parmesantupp.html
@@ -8,9 +8,28 @@
 </head>
 <body>
     <h1>Parmesantupp</h1>
-    <img src="../recipes/thedish.jpg" alt="chicken dish" height="600" widht="400px">
+    <img src="../recipes/thedish.jpg" alt="chicken dish" height="400px" widht="200px">
     <h2>Description</h2>
-    <p>This is an absolute amazing chickenmeal. The saltiness of the parmesan with the spinach is a marvelous combo.</p>
-    <p>Serve it with rice and dont be cheap on the gravy. You should soak the rice with gravy! </p>
+    <p>This is an absolute amazing chicken meal. The saltiness of the parmesan with the spinach is a marvelous combo.</p>
+    <p>Serve it with rice and dont be cheap on the gravy. You should <strong>soak</strong> the rice with gravy! </p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>4 chicken fillet</li>
+        <li>3 dl heavy cream</li>
+        <li>150 g parmesan</li>
+        <li>200 g spinach</li>
+        <li>0,5 dl olive oil</li>
+        <li>0,5 dl soy</li>
+        <li>1 lemon</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Marinate the chicken in the soy and olive oil. Squeeze the lemon juice in to the marinade.</li>
+        <li>Fry the chicken in a really hot pan until it gets some nice color.</li>
+        <li>Put the chicken in an oven form</li>
+        <li>Pour the cream over the chicken. Sprinkel parmesan and spinach over the chicken</li>
+        <li>Put in oven at 200 degrees celsius for about 40 minutes</li>
+        <li>Boil the rice and voila. Dig in!</li>
+    </ol>
 </body>
 </html>
