added new recipe

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/parmesantupp.html">Parmesantupp</a>
+        <a href="./recipes/cps.html">Creamy Pesto Shrimp</a>
     </body>
 </html>
