--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/parmesantupp.html">Parmesantupp</a>
-        <a href="./recipes/cps.html">Creamy Pesto Shrimp</a>
+       <ul>
+       <li><a href="./recipes/parmesantupp.html">Parmesantupp</a></li>
+       <li><a href="./recipes/cps.html">Creamy Pesto Shrimp</a></li>
+       <li><a href="./recipes/meatloaf.html">Meatloaf</a></li>
+       </ul> 
     </body>
 </html>
