--- a/recipes/cps.html
+++ b/recipes/cps.html
@@ -28,5 +28,6 @@
         <li>Stir Parmesan cheese into cream sauce, stirring until thoroughly mixed. Blend in the pesto, and cook for 3 to 5 minutes, until thickened.</li>
         <li>Stir in the shrimp, and cook until they turn pink, about 5 minutes. Serve over the hot linguine.</li>
     </ol>
+    <p><strong>Enjoy your meal!</strong></p>
 </body>
 </html>
