--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -31,5 +31,6 @@
         <li>In a separate small bowl, combine the brown sugar, mustard and ketchup. Mix well and pour over the meatloaf.</li>
         <li>Bake at 350 degrees F (175 degrees C) for 1 hour.</li>
     </ol>
+    <p><strong>Enjoy your meal!</strong></p>
 </body>
 </html>
